# wikipedia-agent

./: .dockerignore  .env.example  .gitignore  CHANGES_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  JSON_MODE_FEATURE.md  MIGRATION_SUMMARY.md  MIGRATION_TO_STRANDS.md  OUTPUT_COMPARISON_EXAMPLE.md  QUICKSTART.md  README.md  TESTING.md  TEST_STATUS_SUMMARY.md  TOOL_BASED_JSON_REDESIGN.md  WEB_SERVICE_OVERVIEW.md  WEB_SERVICE_QUICKSTART.md  WEB_SERVICE_SUMMARY.md  config.yaml  demo.py  demo_json_mode.py  docker-compose.yml  independence.txt  pyproject.toml  query.sh  rollercoaster.txt  run_ci_tests_locally.sh  start.sh  test_e2e_manual.py  test_integration_mocked.py  test_json_mode.py  test_simple.py  test_strands_agent.py  verify_web_setup.sh
.claude/: settings.local.json
.github/: CI_SETUP.md  LESSONS_LEARNED.md
.github/workflows/: tests.yml
prompts/: system.yaml
src/: __init__.py  agent.py  agent_legacy.py  agent_strands.py  config.py  fact_accumulator.py  fact_models.py  main.py  prompts.py
src/llm/: __init__.py  base.py  ollama.py  openrouter.py
src/tui/: __init__.py  app.py
src/web/: __init__.py  app.py
src/web/static/: app.js  index.html  style.css
src/wikipedia/: __init__.py  citation.py  search.py  tools.py
tests/: __init__.py  test_agent.py  test_config.py  test_llm.py  test_wikipedia.py
