[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikipedia-agent"
version = "0.1.0"
description = "A Wikipedia research agent with LLM integration and MLA citations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wikipedia-api>=0.6.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[project.scripts]
wikipedia-agent = "src.tui.app:main"
wikipedia-agent-cli = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src"]
